# frBTC-on-BRC20-Prog BTC-volume indexer.
#
# Same net-BTC-flow model as `frbtc-volume-indexer` (the alkanes/32:0 one), but
# for the frBTC representation on BRC20-Prog: the wrap envelope is an
# `OP_RETURN "BRC20PROG"` marker (not an alkanes op-77/78 protostone) and the
# signer is the BRC20-Prog frBTC signer P2TR. The core model is pure + native-
# testable (see tests/volume_model.rs, real mainnet fixtures); the metashrew
# rockshrew-mono wasm entrypoint is a thin wrapper added on top (feature-gated).
[workspace]

[package]
name = "frbtc-brc20-volume-indexer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Net-BTC-flow (wrap/unwrap) indexer for frBTC on BRC20-Prog — signer-address model, mirrors the alkanes frbtc-volume-indexer."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
