# Forked from h2 0.4.6
# (https://github.com/hyperium/h2 @ v0.4.6, crates.io h2-0.4.6).
#
# The only material change is the addition of an opt-in
# `order: Option<Vec<SettingKind>>` field on `frame::Settings`
# so consumers (tlsfetch-emulation's persona dialer) can emit
# SETTINGS frames in a specific order to match a target
# browser's fingerprint. Everything else is byte-identical to
# upstream.
#
# License: same as upstream (MIT). See LICENSE in this directory.
#
# The crate ships under the package name `h2` so the workspace's
# [patch.crates-io] entry picks it up transparently — every
# downstream consumer (hyper, tlsd-h2-proxy) keeps depending on
# `h2 = "0.4"` without a Cargo.toml edit.

[package]
name = "h2"
version = "0.4.6"
license = "MIT"
authors = [
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
]
description = "An HTTP/2 client and server (tlsfetch fork)"
documentation = "https://docs.rs/h2"
repository = "https://github.com/hyperium/h2"
readme = "README.md"
keywords = ["http", "async", "non-blocking"]
categories = ["asynchronous", "web-programming", "network-programming"]
edition = "2021"
rust-version = "1.63"

[features]
# Enables `futures::Stream` implementations for various types.
stream = []

# Enables **unstable** APIs. Any API exposed by this feature has no backwards
# compatibility guarantees. In other words, you should not use this feature for
# anything besides experimentation. Definitely **do not** publish a crate that
# depends on this feature.
unstable = []

# [workspace] members from upstream h2 are removed — the test
# crates + utilities live in our parent workspace (or are
# dropped entirely for the vendored fork).

[dependencies]
atomic-waker = "1.0.0"
futures-core = { version = "0.3", default-features = false }
futures-sink = { version = "0.3", default-features = false }
tokio-util = { version = "0.7.1", features = ["codec", "io"] }
tokio = { version = "1", features = ["io-util"] }
bytes = "1"
http = "1"
tracing = { version = "0.1.35", default-features = false, features = ["std"] }
fnv = "1.0.5"
slab = "0.4.2"
indexmap = { version = "2", features = ["std"] }

[dev-dependencies]

# Fuzzing
quickcheck = { version = "1.0.3", default-features = false }
rand = "0.8.4"

# HPACK fixtures
hex = "0.4.3"
walkdir = "2.3.2"
serde = "1.0.0"
serde_json = "1.0.0"

# Examples
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
env_logger = { version = "0.10", default-features = false }
tokio-rustls = "0.26"
webpki-roots = "0.26"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fuzzing)"] }

[package.metadata.docs.rs]
features = ["stream"]

# [[bench]] dropped — upstream benches/ removed in the vendored
# fork; we run h2's correctness via downstream consumers (hyper,
# tlsd-h2-proxy) + the e2e suite.
