# Forked from hyperium/h3 v0.0.9 (h3-quinn subcrate).
# Byte-identical vendor today; future fingerprint patches plug
# in here. Package name stays `h3-quinn` for [patch.crates-io].

[package]
name = "h3-quinn"
version = "0.0.9"
rust-version = "1.70"
authors = ["Jean-Christophe BEGUE <jc.begue@pm.me>"]
edition = "2021"
documentation = "https://docs.rs/h3-quinn"
repository = "https://github.com/hyperium/h3"
description = "QUIC transport implementation based on Quinn (tlsfetch fork)."
keywords = ["http3", "quic", "h3"]
categories = ["network-programming", "web-programming"]
license = "MIT"

[dependencies]
# h3 resolves through workspace [patch.crates-io] → h3-tlsfetch.
h3 = "0.0.8"
bytes = "1"
quinn = { version = "0.11.7", default-features = false, features = [
    "futures-io",
] }
tokio-util = { version = "0.7.9" }
futures = { version = "0.3.28" }
tokio = { version = "1", features = ["io-util"], default-features = false }
# h3-datagram dropped — optional, not used by tlsd. The datagram
# feature is also gone; src/datagram.rs is removed below.
tracing = { version = "0.1.40", optional = true }

[features]
tracing = ["dep:tracing"]
