# Forked from hyperium/h3 v0.0.8.
#
# v1 of the fork ships a byte-identical vendor — h3 already
# encodes SETTINGS in insertion order (see
# proto/frame.rs::Settings::encode), so SETTINGS-frame ordering
# for fingerprint matching is already operator-controllable via
# the insertion sequence. Future fingerprint customization
# (control-stream timing, QPACK encoder-table priming) patches
# live here.
#
# Package name stays `h3` so [patch.crates-io] swaps it
# transparently for every downstream consumer.

[package]
name = "h3"
version = "0.0.8"
rust-version = "1.70"
authors = [
    "Sean McArthur <sean@seanmonstar.com>",
    "Jean-Christophe BEGUE <jc.begue@pm.me>",
]
license = "MIT"
edition = "2021"
documentation = "https://docs.rs/h3"
repository = "https://github.com/hyperium/h3"
description = "An async HTTP/3 implementation (tlsfetch fork)."
keywords = ["http3", "quic", "h3"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]

[features]
i-implement-a-third-party-backend-and-opt-into-breaking-changes = []
tracing = ["dep:tracing"]

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
http = "1"
tokio = { version = "1", features = ["sync"] }
pin-project-lite = { version = "0.2", default-features = false }
tracing = {version = "0.1.40", optional = true}
fastrand = "2.0.1"

[dev-dependencies]
assert_matches = "1.5.0"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
proptest = "1"
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
quinn-proto = { version = "0.11", default-features = false }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std"] }
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
futures = { version = "0.3.28" }
tokio-util = { version = "0.7.9" }
# h3-datagram dev-dep dropped — only used by upstream's tests
# (which we drop in the vendor); not part of the public surface.