# Forked from quinn-rs/quinn @ quinn-0.11.7 tag (quinn-proto
# subcrate, v0.11.10).
#
# v1 ships a byte-identical vendor — workspace = true references
# have been substituted with the exact values from upstream's
# Cargo.toml so the crate stands alone in our workspace. Future
# fingerprint patches (initial-packet shape, transport-parameter
# ordering) plug in here without upstream coordination.
#
# Package name stays `quinn-proto` so workspace [patch.crates-io]
# swaps it transparently for every downstream consumer (quinn,
# tlsd-h3-proxy via the h3-quinn fork).

[package]
name = "quinn-proto"
version = "0.11.10"
edition = "2021"
rust-version = "1.71"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quinn-rs/quinn"
description = "State machine for the QUIC transport protocol (tlsfetch fork)"
keywords = ["quic"]
categories = ["network-programming", "asynchronous"]

[features]
default = ["rustls-ring", "log"]
aws-lc-rs = ["dep:aws-lc-rs", "aws-lc-rs?/aws-lc-sys", "aws-lc-rs?/prebuilt-nasm"]
aws-lc-rs-fips = ["aws-lc-rs", "aws-lc-rs?/fips"]
rustls = ["rustls-ring"]
rustls-aws-lc-rs = ["dep:rustls", "rustls?/aws-lc-rs", "aws-lc-rs"]
rustls-aws-lc-rs-fips = ["rustls-aws-lc-rs", "aws-lc-rs-fips"]
rustls-ring = ["dep:rustls", "rustls?/ring", "ring"]
ring = ["dep:ring"]
platform-verifier = ["dep:rustls-platform-verifier"]
log = ["tracing/log"]
rustls-log = ["rustls?/logging"]

[dependencies]
arbitrary = { version = "1.0.1", features = ["derive"], optional = true }
aws-lc-rs = { version = "1.9", default-features = false, optional = true }
bytes = "1"
rustc-hash = "2"
rand = "0.9"
ring = { version = "0.17", optional = true }
rustls = { version = "0.23.5", default-features = false, features = ["std"], optional = true }
rustls-platform-verifier = { version = "0.5", optional = true }
slab = "0.4.6"
thiserror = "2.0.3"
tinyvec = { version = "1.1", features = ["alloc"] }
tracing = { version = "0.1.10", default-features = false, features = ["std"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
rustls-pki-types = { version = "1.7", features = ["web"] }
web-time = "1"

# Dev-deps from upstream (assert_matches, rcgen, hex-literal,
# tracing-subscriber, wasm-bindgen-test, lazy_static) dropped —
# upstream's tests/ folder isn't vendored; correctness rides on
# downstream consumers (quinn, h3-quinn, tlsd-h3-proxy) + the
# iter-113 H3 e2e test.

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
