[package]
name = "subfrost-meet-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
constant_time_eq = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
